--- a/hcan4linuxd/README
+++ b/hcan4linuxd/README
@@ -14,4 +14,6 @@ make TARGET=BANANAPI KDIR=/root/linux-bananapi/
 
 Now install the module and load it. In my config I have to use insmod --force can4linux because of some wrong kernel version info. Maybe you have to create the devices by using the make.
 
-http://wiki.openhcan.org/doku.php?id=hcan4linuxd
+
+Eine deutsche Anleitung die Bananian auf dem Bananapi verwendet findet sich hier: 
+http://wiki.openhcan.org/doku.php?id=bananapi
