Hilfsmittel zur Konfiguration des Pi (Bananapi)

--- a/pi/README
+++ b/pi/README
@@ -1,3 +1,6 @@
+Hilfsmittel zur Konfiguration des Pi (Bananapi)
+
+
 Aktuelle Hardware-/Software- Konfiguration: 
 -------------------------------------------
 
